Create connection to an Eureka Server

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: economics-warehouse-server
   datasource:
     url: jdbc:h2:mem:warehousedb
     driverClassName: org.h2.Driver
@@ -8,3 +10,13 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: none
+server:
+  port: 8001
+eureka:
+  client:
+    defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+  healthcheck:
+    enabled: true
+  instance:
+    leaseRenewalIntervalInSeconds: 30
+    preferIpAddress: true
