--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: sql/changelog-1.1.sql
       relativeToChangelogFile: true
+  - include:
+      file: sql/changelog-1.2.sql
+      relativeToChangelogFile: true
