--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ repositories {
     mavenCentral()
 }
 
+bootJar {
+    archiveFileName = "${archiveBaseName.get()}.${archiveExtension.get()}"
+}
+
 dependencies {
     implementation 'org.liquibase:liquibase-core:3.8.9'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
