--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,9 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.2.RELEASE'
     implementation 'org.modelmapper:modelmapper:2.3.6'
     implementation 'org.postgresql:postgresql:42.2.12'
-    implementation 'com.h2database:h2'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'com.h2database:h2'
 }
 
 test {
